# python-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.yml  main.py  mypy.ini  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: auto_ruff.yml  bandit.yml  mypy.yml  ruff.yml  tests.yml  unittest.yml
config/logging/: queued-stderr-json-file.json
python-boilerplate/scripts/: use_custom_logger.py
python-boilerplate/src/python_boilerplate/util/: mylogger.py
python-boilerplate/tests/: test_tautology.py
python_boilerplate/: main.py
scripts/: use_custom_logger.py
src/util/: mylogger.py
